# cookiecutters-shell

./: .gitignore  README.md  archivate.ps1
class-py/: README.md
class-py/hooks/: post_gen_project.py
cookiecutters/class-py/: README.md  cookiecutter.json
cookiecutters/class-py/{{cookiecutter.class_name}}/: {{cookiecutter.class_name}}.py
cookiecutters/dash-app/: README.md  cookiecutter.json
cookiecutters/dash-app/{{cookiecutter.app_name}}/: __main__.py  app.py
cookiecutters/dash-app/{{cookiecutter.app_name}}/widgets/: controller.py  layout.py
cookiecutters/dash-widget/: README.md  cookiecutter.json
cookiecutters/dash-widget/{{cookiecutter.widget_name}}/: {{cookiecutter.widget_name}}_controller.py  {{cookiecutter.widget_name}}_view.py
cookiecutters/journal-project-tex/: README.md  cookiecutter.json
cookiecutters/journal-project-tex/{{cookiecutter.project_name}}/: main.tex
cookiecutters/journal-project-tex/{{cookiecutter.project_name}}/sections/: 1.tex  2.tex  3.tex  annotation.tex  title.tex
cookiecutters/poetry-click-app/: README.md  cookiecutter.json
cookiecutters/poetry-click-app/{{cookiecutter.app_name}}/: pyproject.toml
cookiecutters/poetry-click-app/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __main__.py
cookiecutters/poetry-dash-app-data/: README.md
cookiecutters/poetry-dash-app-data/hooks/: post_gen_project.py
cookiecutters/poetry-dash-app-data/{{cookiecutter.app_name}}/: .gitignore  README.md  pyproject.toml
cookiecutters/poetry-dash-app-data/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __main__.py
cookiecutters/poetry-dash-app-data/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/dash_app/: DashApp.py  app.py  controllers.py
cookiecutters/poetry-dash-app-data/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/dash_app/assets/markup/haml/: index.haml
cookiecutters/poetry-dash-app-data/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/dash_app/assets/markup/html/: index.html
cookiecutters/poetry-dash-app-data/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/dash_app/widgets/: controller.py  view.py
cookiecutters/poetry-dash-app-data/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/data/: initial_data.py
cookiecutters/poetry-dash-app-simple/: README.md  cookiecutter.json
cookiecutters/poetry-dash-app-simple/{{cookiecutter.app_name}}/: .gitignore  pyproject.toml
cookiecutters/poetry-orange-widget/: README.md  cookiecutter.json
cookiecutters/poetry-orange-widget/{{cookiecutter.widget_name}}/: pyproject.toml
cookiecutters/poetry-orange-widget/{{cookiecutter.widget_name}}/{{cookiecutter.widget_name}}/: {{cookiecutter.widget_name}}.py
cookiecutters/pytorch-lstm-time-series/: README.md  cookiecutter.json
cookiecutters/pytorch-lstm-time-series/{{cookiecutter.model_name}}/: conversion.py  model.py  utils.py  {{cookiecutter.model_name}}.ipynb
