[tool.poetry]
name = "{{cookiecutter.app_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.authors}}"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^3.6"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"

[rhyme.scripts]
run = "python -m {{cookiecutter.app_name}}"
build = "pyinstaller {{cookiecutter.app_name}}/__main__.py --distpath dist -n {{cookiecutter.app_name}}.exe -F"
exec = "dist/{{cookiecutter.app_name}}.exe"
build_dir = "pyinstaller {{cookiecutter.app_name}}/__main__.py --distpath dist -n {{cookiecutter.app_name}}"
exec_dir = "dist/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}.exe"
clear = "rmdir build /s /q & rmdir dist /s /q & del {{cookiecutter.app_name}}.exe.spec & del {{cookiecutter.app_name}}.spec"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"