[tool.poetry]
name = "{{cookiecutter.widget_name}}"
version = "0.1.0"
description = ""
authors = ["author"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.plugins."orange.widgets"]
{{cookiecutter.category}} = "{{cookiecutter.widget_name}}"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"